Calendar: changing start date does not offer saving immediately
3.44.4 (3.44.4-1.fc36)
Problem When I alter an event's start time (i.e. it says 16:10 and I change it to 16:15) in an event window and then close the window, the change is lost. The change indicator (then in other cases turns black, "save current changes and close editor") does not even turn black...
It seems, I have to first click elsewhere on the window or switch to another programme, before evolution notices the edit.
It would be ideal if Evolution listens in some form to edits in its fields and then automatically offers to save these (or even automatically saves these) within milliseconds.