I#2006 - Calendar: Changing start date does not offer saving immediately

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2006